# codehealth

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.githooks/: pre-commit
.github/ISSUE_TEMPLATE/: bug_report.md  false_negative.md  false_positive.md  language_parsing_bug.md  rule_request.md
.github/workflows/: ci.yml
crates/autofix/: Cargo.toml
crates/autofix/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: baseline.rs  clippy.rs  main.rs
crates/cli/tests/: cli.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/duplication/: Cargo.toml
crates/duplication/src/: lib.rs
crates/integrations/: Cargo.toml
crates/integrations/src/: lib.rs
crates/languages/python/: Cargo.toml
crates/languages/python/src/: lib.rs
crates/languages/python/src/queries/: definitions.scm  imports.scm
crates/languages/rust/: Cargo.toml
crates/languages/rust/src/: lib.rs
crates/languages/rust/src/queries/: definitions.scm  imports.scm
crates/languages/typescript/: Cargo.toml
crates/languages/typescript/src/: lib.rs
crates/languages/typescript/src/queries/: definitions.scm  imports.scm
crates/parser/: Cargo.toml
crates/parser/src/: lib.rs
crates/reporters/: Cargo.toml
crates/reporters/src/: lib.rs
crates/rules/: Cargo.toml
crates/rules/src/: lib.rs  style.rs
crates/rules_fastapi/: Cargo.toml
crates/rules_fastapi/src/: lib.rs
crates/rules_react/: Cargo.toml
crates/rules_react/src/: lib.rs
crates/rules_rust/: Cargo.toml
crates/rules_rust/src/: lib.rs
crates/symbols/: Cargo.toml
crates/symbols/src/: canonical.rs  lib.rs
crates/testing/: Cargo.toml
crates/testing/src/: lib.rs
crates/workspace/: Cargo.toml
crates/workspace/src/: lib.rs
docs/: autofix-policy.md  embedding-privacy.md  findings-taxonomy.md  product-scope.md  reporting.md  scoring.md  severity-confidence.md
fixtures/duplicates/: b.ts
fixtures/fastapi/: app.py
fixtures/parser/python/: definitions.py
fixtures/parser/rust/: definitions.rs
fixtures/parser/tsx/: components.tsx
fixtures/parser/typescript/: definitions.ts
fixtures/python/: service.py
fixtures/react/: List.tsx
fixtures/rust/: lib.rs
fixtures/suppressions/: block_a.ts  next_b.ts
fixtures/tsx/: component.tsx
fixtures/typescript/: duplicate_names.ts
