[package]
name = "codehealth-config"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
codehealth-core.workspace = true
codehealth-rules.workspace = true
globset.workspace = true
serde.workspace = true
thiserror.workspace = true
toml.workspace = true
