[package]
name = "codehealth-duplication"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
codehealth-core.workspace = true
codehealth-symbols.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
xxhash-rust.workspace = true
