[package]
name = "codehealth-integrations"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
codehealth-config.workspace = true
codehealth-core.workspace = true
codehealth-workspace.workspace = true
serde_json.workspace = true
sha2.workspace = true
