[package]
name = "codehealth-reporters"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
codehealth-core.workspace = true
codehealth-rules.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
