[package]
name = "codehealth-rules-rust"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
codehealth-core.workspace = true
codehealth-parser.workspace = true
codehealth-rules.workspace = true
codehealth-symbols.workspace = true
serde_json.workspace = true
sha2.workspace = true
tree-sitter.workspace = true
