[package]
name = "codehealth-symbols"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
codehealth-core.workspace = true
codehealth-parser.workspace = true
serde_json.workspace = true
sha2.workspace = true

[dev-dependencies]
insta.workspace = true
