[package]
name = "codehealth-workspace"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
codehealth-parser.workspace = true
globset.workspace = true
ignore.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile = "3.10"
