[package]
name = "codehealth-language-python"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
codehealth-parser.workspace = true
codehealth-symbols.workspace = true
tree-sitter.workspace = true
tree-sitter-python.workspace = true

[dev-dependencies]
insta.workspace = true
