[package]
name = "codehealth-language-rust"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
codehealth-parser.workspace = true
codehealth-symbols.workspace = true
tree-sitter.workspace = true
tree-sitter-rust.workspace = true

[dev-dependencies]
insta.workspace = true
